Task Editor - Asset picker now populates on load, is taller.

--- a/ui/admin/templates/taskEdit.html
+++ b/ui/admin/templates/taskEdit.html
@@ -206,7 +206,7 @@ $var cssfiles: taskEdit.css taskView.css ../script/jquery/jquery.ui.ufd-0.6/css/
             <input id="asset_search_text" class="search_text" />
         </span><span id="asset_search_btn">Search</span>
         <hr />
-        <div style="text-align: left; height: 300px; overflow: auto;" id="asset_picker_results"></div>
+        <div style="text-align: left; height: 100%; overflow: auto;" id="asset_picker_results"></div>
         <input type="hidden" id="asset_picker_target_field" value="" />
         <input type="hidden" id="asset_picker_target_name_field" value="" />
     </center>
