--- a/ui/admin/templates/base.html
+++ b/ui/admin/templates/base.html
@@ -25,7 +25,7 @@ $def with (content)
         <link type="text/css" href="static/style/main.css" rel="stylesheet" />
         <link type="text/css" href="static/style/ui.tabs.css" rel="stylesheet" />
         <link type="text/css" href="static/style/superfish/superfish.css" rel="stylesheet" />
-        <link type="text/css" href="static/style/tipTip.css" rel="stylesheet" />
+        <link type="text/css" href="/common/css/tipTip.css" rel="stylesheet" />
 
         <!--Any .css files defined on the content page.-->
         $if content.cssfiles:
