--- a/ui/admin/templates/popup.html
+++ b/ui/admin/templates/popup.html
@@ -22,7 +22,7 @@ $def with (content)
         <title>Cato - Cloud Sidekick</title>
         <link rel="icon" href="static/images/favicon.ico" />
         <link type="text/css" href="static/style/main.css" rel="stylesheet" />
-        <link type="text/css" href="static/style/tipTip.css" rel="stylesheet" />
+        <link type="text/css" href="/common/css/tipTip.css" rel="stylesheet" />
         <!--jQuery -->
         <script src="/common/js/jquery/jquery-1.10.2.min.js"></script>
         <script src="/common/js/jquery/jquery-ui-1.10.3.min.js"></script>
