moved vkbeautify.js to ui/common

--- a/ui/admin/templates/importObject.html
+++ b/ui/admin/templates/importObject.html
@@ -1,5 +1,5 @@
 $def with ()
-$var jsfiles: importObject.js vkbeautify.js
+$var jsfiles: importObject.js /common/js/vkbeautify.js
 $var cssfiles:
 
 <div id="content">
