moved validation.js to ui/common

--- a/ui/admin/templates/base.html
+++ b/ui/admin/templates/base.html
@@ -51,7 +51,7 @@ $def with (content)
         <!-- JavaScript -->
         <script src="static/script/masterpage.js"></script>
         <script src="static/script/MainScript.js"></script>
-        <script src="static/script/validation.js"></script>
+        <script src="/common/js/validation.js"></script>
         <script src="static/script/logViewDialog.js"></script>
         <script src="static/script/ajax.js"></script>
         <script src="static/script/site.master.js"></script>
