--- a/ui/admin/templates/popup.html
+++ b/ui/admin/templates/popup.html
@@ -36,7 +36,7 @@ $def with (content)
         <!-- JavaScript -->
         <script src="static/script/masterpage.js"></script>
         <script src="static/script/MainScript.js"></script>
-        <script src="static/script/validation.js"></script>
+        <script src="/common/js/validation.js"></script>
 		<script src="static/script/ajax.js"></script>
 
         <!--Any .js files defined on the content page.-->
