--- a/ui/admin/templates/settings.html
+++ b/ui/admin/templates/settings.html
@@ -1,5 +1,5 @@
 $def with ()
-$var jsfiles: settings.js validation.js
+$var jsfiles: settings.js /common/js/validation.js
 $var cssfiles:
 
 <style type="text/css">
