#311 - remaining 3rd party files moved to ui/common

--- a/ui/admin/templates/base.html
+++ b/ui/admin/templates/base.html
@@ -23,8 +23,8 @@ $def with (content)
         <link rel="shorcut icon" href="static/images/favicon.ico" />
         <!-- Imp CSS -->
         <link type="text/css" href="static/style/main.css" rel="stylesheet" />
-        <link type="text/css" href="static/style/ui.tabs.css" rel="stylesheet" />
-        <link type="text/css" href="static/style/superfish/superfish.css" rel="stylesheet" />
+        <link type="text/css" href="/common/css/ui.tabs.css" rel="stylesheet" />
+        <link type="text/css" href="/common/css/superfish/superfish.css" rel="stylesheet" />
         <link type="text/css" href="/common/css/tipTip.css" rel="stylesheet" />
 
         <!--Any .css files defined on the content page.-->
@@ -39,9 +39,9 @@ $def with (content)
         <script src="/common/js/jquery/jquery.blockUI.js"></script>
         <script src="/common/js/jquery/jquery.textarea.js"></script>
         <script src="/common/js/jquery/jquery.timers.js"></script>
-        <script src="static/script/superfish/hoverIntent.js"></script>
-        <script src="static/script/superfish/superfish.js"></script>
-        <script src="static/script/superfish/supersubs.js"></script>
+        <script src="/common/js/jquery/superfish/hoverIntent.js"></script>
+        <script src="/common/js/jquery/superfish/superfish.js"></script>
+        <script src="/common/js/jquery/superfish/supersubs.js"></script>
         <script src="/common/js/jquery/jquery.scrollTo.js"></script>
         <script src="/common/js/jquery/jquery.tipTip.js"></script>
         <script src="/common/js/jquery/jquery.timepicker.js"></script>
