--- a/ui/admin/templates/depTemplateEdit.html
+++ b/ui/admin/templates/depTemplateEdit.html
@@ -1,5 +1,5 @@
 $def with ()
-$var jsfiles: toolbox.js depTemplateEdit.js tags.js jsonlint/c/js/json2.js jsonlint/c/js/jsl.parser.js jsonlint/c/js/jsl.format.js jsonlint/c/js/jsl.interactions.js ../../common/js/jquery/jsoneditor/jsoneditor.js
+$var jsfiles: toolbox.js depTemplateEdit.js tags.js ../../common/js/jsonlint/c/js/json2.js ../../common/js/jsonlint/c/js/jsl.parser.js ../../common/js/jsonlint/c/js/jsl.format.js ../../common/js/jsonlint/c/js/jsl.interactions.js ../../common/js/jquery/jsoneditor/jsoneditor.js
 $var cssfiles: taskEdit.css taskView.css ../../common/js/jquery/jsoneditor/jsoneditor.css
 
 <div id="left_panel_te">
