updated references to 3rd party code in 'uicachepath'

--- a/ui/admin/templates/base.html
+++ b/ui/admin/templates/base.html
@@ -33,25 +33,26 @@ $def with (content)
                 <link type="text/css" href="static/style/$f" rel="stylesheet" />
 
         <!--jQuery -->
-        <script src="/common/js/jquery/jquery-1.10.2.min.js"></script>
-        <script src="/common/js/jquery/jquery-ui-1.10.3.min.js"></script>
+        <script src="/cache/js/jquery/jquery-1.10.2.min.js"></script>
+        <script src="/cache/js/jquery/jquery-ui-1.10.3.min.js"></script>
         <!-- Plugins -->
-        <script src="/common/js/jquery/jquery.blockUI.js"></script>
-        <script src="/common/js/jquery/jquery.textarea.js"></script>
-        <script src="/common/js/jquery/jquery.timers.js"></script>
-        <script src="/common/js/jquery/superfish/hoverIntent.js"></script>
-        <script src="/common/js/jquery/superfish/superfish.js"></script>
-        <script src="/common/js/jquery/superfish/supersubs.js"></script>
-        <script src="/common/js/jquery/jquery.scrollTo.js"></script>
-        <script src="/common/js/jquery/jquery.tipTip.js"></script>
-        <script src="/common/js/jquery/jquery.timepicker.js"></script>
-        <script src="/common/js/jquery/jquery.base64.js"></script>
-        <script src="/common/js/jquery/jquery.cookie.js"></script>
-        <script src="/common/js/jquery/jquery.sortElements.js"></script>
+        <script src="/cache/js/jquery/jquery.blockUI.js"></script>
+        <script src="/cache/js/jquery/jquery.textarea.js"></script>
+        <script src="/cache/js/jquery/jquery.timers.js"></script>
+        <script src="/cache/js/jquery/superfish/hoverIntent.js"></script>
+        <script src="/cache/js/jquery/superfish/superfish.js"></script>
+        <script src="/cache/js/jquery/superfish/supersubs.js"></script>
+        <script src="/cache/js/jquery/jquery.scrollTo.js"></script>
+        <script src="/cache/js/jquery/jquery.tipTip.js"></script>
+        <script src="/cache/js/jquery/jquery.timepicker.js"></script>
+        <script src="/cache/js/jquery/jquery.base64.js"></script>
+        <script src="/cache/js/jquery/jquery.cookie.js"></script>
+        <script src="/cache/js/jquery/jquery.sortElements.js"></script>
         <!-- JavaScript -->
         <script src="static/script/masterpage.js"></script>
         <script src="static/script/MainScript.js"></script>
-        <script src="/common/js/validation.js"></script>
+        <script src="/common/js/validation.js
+"></script>
         <script src="static/script/logViewDialog.js"></script>
         <script src="static/script/ajax.js"></script>
         <script src="static/script/site.master.js"></script>
