--- a/ui/admin/templates/depTemplateEdit.html
+++ b/ui/admin/templates/depTemplateEdit.html
@@ -1,6 +1,6 @@
 $def with ()
-$var jsfiles: toolbox.js depTemplateEdit.js tags.js ../../common/js/jsonlint/json2.js ../../common/js/jsonlint/jsl.parser.js ../../common/js/jsonlint/jsl.format.js ../../common/js/jsonlint/jsl.interactions.js ../../common/js/jquery/jsoneditor/jsoneditor.js
-$var cssfiles: taskEdit.css taskView.css ../../common/js/jquery/jsoneditor/jsoneditor.css
+$var jsfiles: toolbox.js depTemplateEdit.js tags.js ../../cache/js/jsonlint/json2.js ../../cache/js/jsonlint/jsl.parser.js ../../cache/js/jsonlint/jsl.format.js ../../cache/js/jsonlint/jsl.interactions.js ../../cache/js/jquery/jsoneditor/jsoneditor.js
+$var cssfiles: taskEdit.css taskView.css ../../cache/js/jquery/jsoneditor/jsoneditor.css
 
 <div id="left_panel_te">
     <div id="toolbox">
