--- a/ui/admin/templates/depTemplateManage.html
+++ b/ui/admin/templates/depTemplateManage.html
@@ -1,5 +1,5 @@
 $def with ()
-$var jsfiles: managePageCommon.js depTemplateManage.js ../../common/js/jsonlint/json2.js ../../common/js/jsonlint/jsl.parser.js ../../common/js/jsonlint/jsl.format.js ../../common/js/jsonlint/jsl.interactions.js
+$var jsfiles: managePageCommon.js depTemplateManage.js ../../cache/js/jsonlint/json2.js ../../cache/js/jsonlint/jsl.parser.js ../../cache/js/jsonlint/jsl.format.js ../../cache/js/jsonlint/jsl.interactions.js
 $var cssfiles:
 
 <div style="display: none;">
