Fixed issue with jsonlint on deployment template pages.

--- a/ui/admin/templates/depTemplateEdit.html
+++ b/ui/admin/templates/depTemplateEdit.html
@@ -1,5 +1,5 @@
 $def with ()
-$var jsfiles: toolbox.js depTemplateEdit.js tags.js ../../cache/js/jsonlint/json2.js ../../cache/js/jsonlint/jsl.parser.js ../../cache/js/jsonlint/jsl.format.js ../../cache/js/jsonlint/jsl.interactions.js ../../cache/js/jquery/jsoneditor/jsoneditor.js
+$var jsfiles: toolbox.js depTemplateEdit.js tags.js ../../cache/js/jsonlint/json2.js ../../cache/js/jsonlint/jsl.parser.js ../../cache/js/jsonlint/jsl.format.js ../../common/js/jsl.interactions.js ../../cache/js/jquery/jsoneditor/jsoneditor.js
 $var cssfiles: taskEdit.css taskView.css ../../cache/js/jquery/jsoneditor/jsoneditor.css
 
 <div id="left_panel_te">
