#314 - last 3rd party lib moved to 'uicache'

--- a/ui/admin/templates/taskEdit.html
+++ b/ui/admin/templates/taskEdit.html
@@ -1,7 +1,7 @@
 $def with ()
-$var jsfiles: taskedit/taskEdit.js taskedit/taskView.js taskedit/taskVersions.js taskedit/taskEditDebug.js taskedit/taskEditCodeblock.js taskedit/taskEditParams.js taskedit/taskEditSteps.js taskedit/taskEditCommandSpecific.js taskedit/taskStepVarsEdit.js ../../cache/js/jquery/jquery.rightClick.js ../../common/js/jquery/jquery.ui.ufd-0.6/jquery.ui.ufd.js toolbox.js ../../common/js/validation.js tags.js parametersOnDialog.js taskLaunchDialog.js
+$var jsfiles: taskedit/taskEdit.js taskedit/taskView.js taskedit/taskVersions.js taskedit/taskEditDebug.js taskedit/taskEditCodeblock.js taskedit/taskEditParams.js taskedit/taskEditSteps.js taskedit/taskEditCommandSpecific.js taskedit/taskStepVarsEdit.js ../../cache/js/jquery/jquery.rightClick.js ../../cache/js/jquery/ufd/jquery.ui.ufd.js toolbox.js ../../common/js/validation.js tags.js parametersOnDialog.js taskLaunchDialog.js
 
-$var cssfiles: taskEdit.css taskView.css ../../common/js/jquery/jquery.ui.ufd-0.6/css/ufd-base.css ../../common/js/jquery/jquery.ui.ufd-0.6/css/plain/plain.css
+$var cssfiles: taskEdit.css taskView.css ../../cache/js/jquery/ufd/css/ufd-base.css ../../cache/js/jquery/ufd/css/plain/plain.css
 
 <div id="left_panel_te">
     <div id="toolbox">
