shared icons for all apps moved to ui/common

--- a/ui/admin/templates/notAllowed.html
+++ b/ui/admin/templates/notAllowed.html
@@ -4,7 +4,7 @@ $var cssfiles:
 
 <div id="fullwidthcontent">
     <div class="ui-state-highlight ui-corner-all" style="margin-left: auto; margin-right: auto; width: 300px; padding: 20px;">
-        <img src="../static/images/icons/information_32.png" />
+        <img src="/common/img/icons/information_32.png" />
         <h2 class="forceinline">Oops...</h2>
         <br />
         <br />
