--- a/ui/admin/static/style/main.css
+++ b/ui/admin/static/style/main.css
@@ -77,7 +77,7 @@ body {
 }
 
 #head {
-	background: #949b50 url(/common/css/images/ui-bg_highlight-soft_75_949b50_1x100.png) 50% 50% repeat-x;
+	background: #B0B579;
 	position: absolute;
 	min-width: 1024px;
 	margin: 0px;
@@ -100,7 +100,7 @@ body {
 /* and make the superfish submenus green like #head */
 .sf-menu li li
  {
-	background: #949b50 url(/common/css/images/ui-bg_highlight-soft_75_949b50_1x100.png) 50% 50% repeat-x;
+	background: #B0B579;
 }
 /* and the hover effect */
 .sf-menu li:hover, .sf-menu li.sfHover, .sf-menu a:focus, .sf-menu a:hover, .sf-menu a:active
@@ -279,7 +279,7 @@ body {
  */
 th.col_header {
 	border: 1px solid #dddddd;
-	background: #949b50;
+	background: #B0B579;
 	font-weight: bold;
 	color: #dddddd;
 }
