--- a/ui/common/css/tipTip.css
+++ b/ui/common/css/tipTip.css
@@ -47,10 +47,14 @@ The shadow colors should match the border color from ui-widget-content.
 	-webkit-border-radius: 3px;
 	-moz-border-radius: 3px;
 	*/
-	border-width: 2px;
 	box-shadow: 0 0 6px #A6C9E2;
 	-webkit-box-shadow: 0 0 6px #A6C9E2;
 	-moz-box-shadow: 0 0 6px #A6C9E2;
+	border: 2px solid #aaaaaa;
+	background-color: #ffffff;
+	font-weight: normal;
+	color: #231F20;
+	border-radius: 4px;
 }
 
 #tiptip_arrow, #tiptip_arrow_inner {
@@ -108,18 +112,4 @@ The shadow colors should match the border color from ui-widget-content.
 	margin-left: -7px;
 	border-left-color: rgb(166,201,226);
 	border-left-color: rgba(166,201,226,0.92);
-}
-
-/* Webkit Hacks  */
-@media screen and (-webkit-min-device-pixel-ratio:0) {	
-	#tiptip_content {
-		padding: 4px 8px 5px 8px;
-		background-color: rgba(45,45,45,0.88);
-	}
-	#tiptip_holder.tip_bottom #tiptip_arrow_inner { 
-		border-bottom-color: rgba(45,45,45,0.88);
-	}
-	#tiptip_holder.tip_top #tiptip_arrow_inner { 
-		border-top-color: rgba(20,20,20,0.92);
-	}
 }
