--- a/ui/admin/templates/deploymentEdit.html
+++ b/ui/admin/templates/deploymentEdit.html
@@ -1,5 +1,5 @@
 $def with ()
-$var jsfiles: toolbox.js deploymentEdit.js tags.js logViewDialog.js
+$var jsfiles: toolbox.js deploymentEdit.js tags.js
 $var cssfiles: taskEdit.css taskView.css
 <div id="left_panel_te">
     <div id="toolbox">
