--- a/ui/admin/templates/popup.html
+++ b/ui/admin/templates/popup.html
@@ -35,9 +35,11 @@ $def with (content)
         <script src="/cache/js/jquery/jquery.base64.js"></script>
         <!-- JavaScript -->
         <script src="static/script/masterpage.js"></script>
-        <script src="static/script/MainScript.js"></script>
-        <script src="/common/js/validation.js
-"></script>
+        <script src="/common/js/url.js"></script>
+        <script src="/common/js/alert.js"></script>
+        <script src="/common/js/openwindow.js"></script>
+        <script src="/common/js/validation.js"></script>
+        <script src="/common/js/ajaxcore.js"></script>
 		<script src="static/script/ajax.js"></script>
 
         <!--Any .js files defined on the content page.-->
@@ -53,7 +55,5 @@ $def with (content)
     </head>
     <body>
         $:content
-        <!-- dynamic divs below here -->
-        <script src="static/script/site.master.common.js"></script>
     </body>
 </html>
