--- a/ui/admin/templates/taskEdit.html
+++ b/ui/admin/templates/taskEdit.html
@@ -1,5 +1,5 @@
 $def with ()
-$var jsfiles: taskedit/taskEdit.js taskedit/taskView.js taskedit/taskVersions.js taskedit/taskEditDebug.js taskedit/taskEditCodeblock.js taskedit/taskEditParams.js taskedit/taskEditSteps.js taskedit/taskEditCommandSpecific.js taskedit/taskStepVarsEdit.js ../../cache/js/jquery/jquery.rightClick.js ../../cache/js/jquery/ufd/jquery.ui.ufd.js toolbox.js ../../common/js/validation.js tags.js parametersOnDialog.js taskLaunchDialog.js
+$var jsfiles: taskedit/taskEdit.js taskedit/taskView.js taskedit/taskVersions.js taskedit/taskEditDebug.js taskedit/taskEditCodeblock.js taskedit/taskEditParams.js taskedit/taskEditSteps.js taskedit/taskEditCommandSpecific.js taskedit/taskStepVarsEdit.js ../../cache/js/jquery/jquery.rightClick.js ../../cache/js/jquery/ufd/jquery.ui.ufd.js toolbox.js tags.js parametersOnDialog.js taskLaunchDialog.js
 
 $var cssfiles: taskEdit.css taskView.css ../../cache/js/jquery/ufd/css/ufd-base.css ../../cache/js/jquery/ufd/css/plain/plain.css
 
