--- a/ui/admin/templates/tagEdit.html
+++ b/ui/admin/templates/tagEdit.html
@@ -1,6 +1,5 @@
 $def with ()
-$var jsfiles: managePageCommon.js /common/js/validation.js
- tagEdit.js
+$var jsfiles: managePageCommon.js tagEdit.js
 $var cssfiles:
 
 <div style="display: none;">
